[package]
name = "sqloxide"
version = "0.1.26.dev"
authors = ["Will Eaton <me@wseaton.com>"]
edition = "2018"

[lib]
name = "sqloxide"
crate-type = ["cdylib"]

[dependencies]
pythonize = "0.17"

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]

[dependencies.illumex-sqlparser]
version = "0.26.1"
features = ["json_example"]
