[package]
name = "sqloxide"
version = "0.2.28"
authors = ["illumex"]
edition = "2018"

[lib]
name = "sqloxide"
crate-type = ["cdylib"]

[dependencies]
pythonize = "0.17"

[dependencies.pyo3]
version = "0.17.1"
features = ["extension-module"]

[dependencies.illumex-sqlparser]
version = "0.28.1"
features = ["json_example"]
